# PostgreSQL-Database-Explorer

source/: CMakeLists.txt  authdialog.cpp  authdialog.h  authdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  tablecreatedialog.cpp  tablecreatedialog.h  tablecreatedialog.ui  tabledropdialog.cpp  tabledropdialog.h  tabledropdialog.ui
